manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-app
  namespace: express-ns
  labels:
    app: express
spec:
  selector:
    matchLabels:
      app: express-app
  replicas: 1
  template:
    metadata:
      labels:
        app: express-app
    spec:
      containers:
      - name: express-cont
        image: ghcr.io/adamroddick/node-express-mysql:master
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: 64Mi
            cpu: 100m
          limits:
            memory: 512Mi
            cpu: 500m
