manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: express-svc
  labels:
    app: express-app
spec:
  type: LoadBalancer
  externalTrafficPolicy: Cluster
  sessionAffinity: None
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: express
